--- a/tokenomics/index.html
+++ b/tokenomics/index.html
@@ -296,7 +296,7 @@
                   data-uc-scrollspy-nav="closet: > *; offset: 48; scroll: true;"
                 >
                   <li><a href="home-one.html#about">Our Story</a></li>
-                  <li><a href="/tokenomics/">Tokenomics</a></li>
+                  <li><a href="home-one.html#tokenomics">Tokenomics</a></li>
                   <li><a href="home-one.html#roadmap">Roadmap</a></li>
                   <li><a href="home-one.html#faq">FAQ</a></li>
                 </ul>
