--- a/index.html
+++ b/index.html
@@ -362,21 +362,21 @@
                 <h1
                   class="h5 sm:h2 lg:h1 xl:display-6 mb-0 ls-0 text-white text-uppercase ls-0 xl:mt-4"
                 >
-                  <span class="text-tertiary">Join </span
+                  <span class="text-tertiary">Learn, </span
                   ><span
                     class="text-gradient bg-gradient-45n from-secondary to-tertiary"
-                    >the revolution</span
+                    >invest and earn</span
                   >
-                  of community-driven cryptocurrencies
+                  on cryptocurrencies
                 </h1>
-                <p class="fs-4 xl:fs-3">The next generation of meme coins.</p>
+                <p class="fs-4 xl:fs-3">Earning as a cryptocurrency lover shouldn't be hard, MuchX is your got-to platform for that. So join us to learn, invest and earn in the journey.</p>
                 <div class="vstack sm:hstack justify-center gap-3 mt-1 sm:mt-2">
                   <a
                     class="btn btn-md sm:btn-xl xl:btn-2xl px-4 xl:px-6 border border-3 border-black bg-gradient-45n from-secondary to-tertiary contrast-shadow -rotate-2 hover:rotate-0"
                     style="--shadowColor: var(--color-secondary)"
                     href="#"
                   >
-                    <span class="text-black">Buy now!</span>
+                    <span class="text-black">Start learning!</span>
                     <span class="fs-4 mb-narrow">🚀</span>
                   </a>
                   <a
@@ -384,7 +384,7 @@
                     style="--shadowColor: var(--color-secondary)"
                     href="page-contact.html"
                   >
-                    <span class="text-black">Join us!</span>
+                    <span class="text-black">Connect wallet!</span>
                     <span class="fs-4 mb-narrow">💪</span>
                   </a>
                 </div>
