--- a/tokenomics/index.html
+++ b/tokenomics/index.html
@@ -296,7 +296,7 @@
                   data-uc-scrollspy-nav="closet: > *; offset: 48; scroll: true;"
                 >
                   <li><a href="home-one.html#about">Our Story</a></li>
-                  <li><a href="home-one.html#tokenomics">Tokenomics</a></li>
+                  <li><a href="/tokenomics/">Tokenomics</a></li>
                   <li><a href="home-one.html#roadmap">Roadmap</a></li>
                   <li><a href="home-one.html#faq">FAQ</a></li>
                 </ul>
@@ -362,12 +362,12 @@
                 <h1
                   class="h5 sm:h2 lg:h1 xl:display-6 mb-0 ls-0 text-white text-uppercase ls-0 xl:mt-4"
                 >
-                  <span class="text-tertiary">Join </span
+                  <span class="text-tertiary">Learn </span
                   ><span
                     class="text-gradient bg-gradient-45n from-secondary to-tertiary"
-                    >the revolution</span
+                    >about tokenomics</span
                   >
-                  of community-driven cryptocurrencies
+                  in a community-driven way
                 </h1>
                 <p class="fs-4 xl:fs-3">The next generation of meme coins.</p>
                 <div class="vstack sm:hstack justify-center gap-3 mt-1 sm:mt-2">
@@ -376,13 +376,13 @@
                     style="--shadowColor: var(--color-secondary)"
                     href="#"
                   >
-                    <span class="text-black">Buy now!</span>
+                    <span class="text-black">Start learning!</span>
                     <span class="fs-4 mb-narrow">🚀</span>
                   </a>
                   <a
                     class="btn btn-md sm:btn-xl xl:btn-2xl px-4 xl:px-6 border border-3 border-black bg-gradient-45n from-fifth to-quaternary contrast-shadow rotate-2 hover:rotate-0"
                     style="--shadowColor: var(--color-secondary)"
-                    href="page-contact.html"
+                    href="#"
                   >
                     <span class="text-black">Join us!</span>
                     <span class="fs-4 mb-narrow">💪</span>
