--- a/index.html
+++ b/index.html
@@ -283,10 +283,7 @@
                     class="panel text-none w-150px xl:w-auto"
                     href="home-one.html"
                   >
-                    <img
-                      src="/assets/images/logo-dark.svg"
-                      alt="MuchWOW"
-                    />
+                    <img src="/assets/images/logo-dark.svg" alt="MuchWOW" />
                   </a>
                 </div>
               </div>
@@ -369,7 +366,11 @@
                   >
                   on cryptocurrencies
                 </h1>
-                <p class="fs-4 xl:fs-3">Earning as a cryptocurrency lover shouldn't be hard, MuchX is your got-to platform for that. So join us to learn, invest and earn in the journey.</p>
+                <p class="fs-4 xl:fs-3">
+                  Earning as a cryptocurrency lover shouldn't be hard, MuchX is
+                  your got-to platform for that. So join us to learn, invest and
+                  earn in the journey.
+                </p>
                 <div class="vstack sm:hstack justify-center gap-3 mt-1 sm:mt-2">
                   <a
                     class="btn btn-md sm:btn-xl xl:btn-2xl px-4 xl:px-6 border border-3 border-black bg-gradient-45n from-secondary to-tertiary contrast-shadow -rotate-2 hover:rotate-0"
@@ -404,44 +405,52 @@
       >
         <div>
           <div class="hstack gap-8">
+            <div>X</div>
+            <span>XRP</span>
+            <div>Ɖ</div>
+            <span>DOGE</span>
+            <div>₿</div>
+            <span>BTC</span>
             <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>MEME COINS</span>
-            <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>CRYPTO</span>
+            <span>BNB</span>
+            <div>$</div>
+            <span>USDC</span>
           </div>
           <div class="hstack gap-8">
+            <div>X</div>
+            <span>XRP</span>
+            <div>Ɖ</div>
+            <span>DOGE</span>
+            <div>₿</div>
+            <span>BTC</span>
             <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>MEME COINS</span>
-            <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>CRYPTO</span>
+            <span>BNB</span>
+            <div>$</div>
+            <span>USDC</span>
           </div>
           <div class="hstack gap-8">
+            <div>X</div>
+            <span>XRP</span>
+            <div>Ɖ</div>
+            <span>DOGE</span>
+            <div>₿</div>
+            <span>BTC</span>
             <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>MEME COINS</span>
-            <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>CRYPTO</span>
+            <span>BNB</span>
+            <div>$</div>
+            <span>USDC</span>
           </div>
           <div class="hstack gap-8">
+            <div>X</div>
+            <span>XRP</span>
+            <div>Ɖ</div>
+            <span>DOGE</span>
+            <div>₿</div>
+            <span>BTC</span>
             <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>MEME COINS</span>
-            <div>¥</div>
-            <span>TOKENOMICS</span>
-            <div>¥</div>
-            <span>CRYPTO</span>
+            <span>BNB</span>
+            <div>$</div>
+            <span>USDC</span>
           </div>
         </div>
       </div>
@@ -468,19 +477,37 @@
                   <h2
                     class="h5 sm:h3 xl:h2 mb-0 mt-2 text-white text-uppercase ls-0 -rotate-1"
                   >
-                    About MUCH WOW 🚀
+                    About MUCH X 🚀
                   </h2>
                 </div>
                 <div class="desc mt-3 sm:mt-4">
                   <p class="fs-6 sm:fs-5 xl:fs-4 mb-2">
-                    Born from the depths of meme culture, MUCH WOW TOKEN emerged
-                    as the ultimate celebration of community and creativity in
-                    the crypto space!
+                    At MuchX, we believe that earning with cryptocurrency should
+                    be simple, accessible, and rewarding. Whether you're new to
+                    the world of crypto or an experienced investor, our platform
+                    is designed to help you learn, invest, and earn seamlessly.
                   </p>
                   <p class="fs-6 sm:fs-5 xl:fs-4">
-                    We're not just another meme coin - we're a movement powered
-                    by our amazing community of believers and dreamers! 🌟
+                    We provide valuable insights, expert guidance, and
+                    investment opportunities that empower you to grow your
+                    portfolio with confidence. With a strong community and
+                    cutting-edge tools, MuchX is your go-to platform for
+                    navigating the exciting world of digital assets! 🌟
                   </p>
+                  <p class="fs-6 sm:fs-5 xl:fs-4">
+                    Join us on this journey and take charge of your financial
+                    future with MuchX! 🚀
+                  </p>
+                </div>
+                <div class="vstack sm:hstack justify-center gap-3 mt-1 sm:mt-2">
+                  <a
+                    class="btn btn-md sm:btn-xl xl:btn-2xl px-4 xl:px-6 border border-3 border-black bg-gradient-45n from-fifth to-quaternary contrast-shadow rotate-2 hover:rotate-0"
+                    style="--shadowColor: var(--color-secondary)"
+                    href="page-contact.html"
+                  >
+                    <span class="text-black">Connect wallet!</span>
+                    <span class="fs-4 mb-narrow">💪</span>
+                  </a>
                 </div>
               </div>
               <div
@@ -516,6 +543,17 @@
                         background: linear-gradient(20deg, #ffffff17, #0d042c);
                       "
                     >
+                      <video
+                        width="100%"
+                        height="200"
+                        controls
+                        poster="thumbnail.jpg"
+                        style="border-radius: 10px;"
+                      >
+                        <source src="video.mp4" type="video/mp4" />
+                        Your browser does not support the video tag.
+                      </video>
+                      <!-- I want to add this video link here to a video element - https://www.youtube.com/watch?v=aLh8jlYYvZA -->
                       <h2 class="h3 xl:h2 m-0 text-secondary">100%</h2>
                       <span class="fs-5 xl:fs-4">COMMUNITY OWNED</span>
                     </div>
